--- a/VC Frontend/package.json
+++ b/VC Frontend/package.json
@@ -2,14 +2,18 @@
   "name": "vcfrontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "doppler run vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
+    "react-toastify": "^8.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
